# chem-7870-epr_svd_tool

./: 260203_Encapsulin_iLOV_Kin_Cap1.DSC  260203_Encapsulin_iLOV_Kin_Cap1.DTA  260203_Encapsulin_iLOV_Kin_Cap1.YGF  260203_Encapsulin_iLOV_Kin_Cap2.DSC  260203_Encapsulin_iLOV_Kin_Cap2.DTA  260203_Encapsulin_iLOV_Kin_Cap2.YGF  README.md  pyproject.toml
examples/: compare_waterfall.py
src/epr_svd_tool/: __init__.py  analysis.py  io.py  plotting.py  preprocess.py  svd.py
tests/: test_preprocess.py  test_svd.py
