[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epr-svd-tool"
version = "0.1.0"
description = "A Python package for preprocessing, denoising, and visualizing kinetic EPR spectra using SVD."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Aaron Li" }
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]
